feat: adding bootRun

--- a/build.gradle
+++ b/build.gradle
@@ -32,3 +32,15 @@ dependencies {
 test {
     useJUnitPlatform()
 }
+
+tasks {
+    bootJar {
+        launchScript()
+    }
+}
+
+tasks {
+    bootJar {
+        launchScript()
+    }
+}
